# bot-core_example-plugin

./: .gitmodules  CMakeLists.txt  plugin-example.cpp  plugin-example.hpp  plugin-export.hpp
